<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    >
    <LinearLayout
        android:id="@+id/item_my_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_ticket_buy" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/xnama_wisata"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mregular"
                android:textColor="@color/blackPrimary"
                android:textSize="16sp"
                android:hint="@string/nama_wisata"/>

            <TextView
                android:id="@+id/xlokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/mlight"
                android:textColor="@color/grayPrimary"
                android:hint="@string/nama_lokasi"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/mlight"
                android:id="@+id/xjumlah_tiket"
                android:hint="@string/jml_tiket"
                android:textColor="@color/bluePrimary"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>